Updated Java app to Boot 4.x Ch 7 end